fix: title article visible

--- a/src/sass/blocks/_tile.scss
+++ b/src/sass/blocks/_tile.scss
@@ -71,6 +71,7 @@
     }
 
     &__description {
+      display: none;
       visibility: hidden;
       opacity: 0;
     }
